Updated some mods

--- a/config/botaniatweaks.cfg
+++ b/config/botaniatweaks.cfg
@@ -17,10 +17,10 @@ balance {
 
     # Should the Entropinnyum generate 8x the mana it does by default? This makes it possible to run an Entropinnyum off of, for example, a cobbleworks; by default, the flint-to-gunpowder recipe is much too expensive to make another TNT.
     # 
-    # Also I think this flower is way underpowered in general, but that's just me. [default: true]
+    # Also I think this flower is way underpowered in general, but that's just me. [default: false]
     B:superEntropinnyum=true
 
-    # Should the Spectrolus generate 10x the mana it does by default? This makes it much cheaper to run; filling a mana pool only requires a little over five stacks of wool, not over a double chest's worth. [default: true]
+    # Should the Spectrolus generate 10x the mana it does by default? This makes it much cheaper to run; filling a mana pool only requires a little over five stacks of wool, not over a double chest's worth. [default: false]
     B:superSpectrolus=true
 
     tnt {
@@ -101,7 +101,6 @@ balance {
 
 
 compat {
-    # Can the Horn of the Wild harvest crops from Agricraft? [default: true]
     B:dootableAgricraft=true
 }
 
@@ -113,8 +112,14 @@ etc {
     # Can dispensers shoot glass bottles to turn them in to Ender Air in the End dimension? This allows for automation of Ender Air, which was not previously possible. [default: true]
     B:enderAirDispenser=true
 
-    # Should Botania Tweaks keep statistics on the total amount of mana generated, across all flowers and dimensions? [default: true]
+    # This number acts as a multiplier for how much mana is in the Guilty Mana Pool. Setting higher than 1 allows for creating "creative pool only" mana infusion recipes, by adding recipes using more than an ordinary pool can hold. [range: 0.0 ~ 1.06, default: 1.0]
+    S:guiltyPoolManaMultiplier=1.0
+
+    # Should Botania Tweaks keep statistics on the total amount of mana generated, across all flowers and dimensions? [default: false]
     B:keepManaGenerationStatistics=true
+
+    # Should the water bowl mechanic, where you right click on water with a bowl to create a filled bowl, be available outside of Garden of Glass mode? [default: false]
+    B:nonGogWaterBowl=false
 
     # Can players place tiny potatoes in flower pots? Please don't disable this, it's very cute. [default: true]
     B:pottedTinyPotato=true
@@ -122,7 +127,7 @@ etc {
     # Can sheep eat the custom Botania grass blocks to regrow their wool? [default: true]
     B:sheepEatCustomGrass=true
 
-    # If true, any item is allowed to enter the Petal Apothecary, not just petals, runes, and manaresources. Great for modpacks. [default: true]
+    # If true, any item is allowed to enter the Petal Apothecary, not just petals, runes, and manaresources. Great for modpacks. [default: false]
     B:unlockApothecary=true
 }
 
