--- a/config/charset/modules.cfg
+++ b/config/charset/modules.cfg
@@ -17,13 +17,17 @@ compat {
     B:"commoncapabilities:lib.slotlessInsertion"=true
     B:"guideapi:tablet"=true
     B:"igw-mod:tablet"=true
+    B:"infraredstone:lib"=true
+    B:"jei:crafting.pocket"=true
     B:"jei:simplelogic.gates"=true
     B:"jei:storage.barrels"=true
     B:"mcjtylib:tablet"=true
     B:"mcmultipart:simplelogic.gates"=true
     B:"opencomputers:audio.storage"=true
     B:"opencomputers:lib"=true
+    B:"quark:lib"=true
     B:"redstonepaste:lib"=true
+    B:"rustic:lib"=true
     B:"storage.barrels:tweak.carry"=true
 }
 
