--- a/config/chiselsandbits.cfg
+++ b/config/chiselsandbits.cfg
@@ -91,6 +91,7 @@ crafting {
     B:alexiy.finestuff.blocks.BlockSwitch=true
     B:alsender.earthworks.block.Block_Chalk=true
     B:alsender.earthworks.block.Block_Gabion=true
+    B:alsender.earthworks.block.Block_Planks_Vert=true
     B:alsender.earthworks.block.Block_Wood_Shingle=true
     B:alsender.earthworks.block.ModBlock=true
     B:alsender.earthworks.block.ModBlockFacing=true
@@ -112,6 +113,17 @@ crafting {
     B:aroma1997.world.StickyOre=true
     B:"binnie.extratrees.blocks.wood.BlockETLog$1"=true
     B:"binnie.extratrees.blocks.wood.BlockETPlank$1"=true
+    B:biomesoplenty.common.block.BlockBOPAsh=true
+    B:biomesoplenty.common.block.BlockBOPBiomeBlock=true
+    B:biomesoplenty.common.block.BlockBOPCrystal=true
+    B:biomesoplenty.common.block.BlockBOPGem=true
+    B:biomesoplenty.common.block.BlockBOPGemOre=true
+    B:biomesoplenty.common.block.BlockBOPGeneric=true
+    B:biomesoplenty.common.block.BlockBOPHive=true
+    B:biomesoplenty.common.block.BlockBOPLog=true
+    B:biomesoplenty.common.block.BlockBOPPlanks=true
+    B:biomesoplenty.common.block.BlockBOPWhiteSand=true
+    B:biomesoplenty.common.block.BlockBOPWhiteSandstone=true
     B:"blusunrize.immersiveengineering.common.IEContent$1"=true
     B:blusunrize.immersiveengineering.common.blocks.BlockIEBase=true
     B:blusunrize.immersiveengineering.common.blocks.metal.BlockMetalDecoration0=true
@@ -243,6 +255,7 @@ crafting {
     B:landmaster.plustic.block.MetalBlock=true
     B:li.cil.oc.common.block.ChameliumBlock=true
     B:li.cil.oc.common.block.FakeEndstone=true
+    B:lightningstudios.solarcycler.block.BlockBase=true
     B:lumien.randomthings.block.BlockBiomeStone=true
     B:lumien.randomthings.block.BlockBlockLuminous=true
     B:lumien.randomthings.block.BlockContactLever=true
@@ -371,6 +384,7 @@ crafting {
     B:net.minecraft.block.BlockHugeMushroom=true
     B:net.minecraft.block.BlockIce=true
     B:net.minecraft.block.BlockMelon=true
+    B:net.minecraft.block.BlockMycelium=true
     B:net.minecraft.block.BlockNetherBrick=true
     B:net.minecraft.block.BlockNetherrack=true
     B:net.minecraft.block.BlockNewLeaf=true
@@ -429,6 +443,8 @@ crafting {
     B:prospector.traverse.blocks.base.BlockTraverseWoodPlanks=true
     B:quaternary.dazzle.block.BlockAnalogLamp=true
     B:quaternary.dazzle.block.BlockDigitalLamp=true
+    B:quaternary.dazzle.common.block.BlockAnalogLamp=true
+    B:quaternary.dazzle.common.block.BlockDigitalLamp=true
     B:rustic.common.blocks.BlockBase=true
     B:rustic.common.blocks.BlockClayWallDiag=true
     B:rustic.common.blocks.BlockFertileSoil=true
