--- a/config/ftbutilities.cfg
+++ b/config/ftbutilities.cfg
@@ -109,9 +109,11 @@ commands {
     B:kickme=true
     B:killall=true
     B:leaderboard=true
+    B:mute=true
     B:nbtedit=true
     B:nick=true
     B:ranks=true
+    B:rtp=true
     B:set_hour=true
     B:spawn=true
     B:tpa=true
@@ -195,6 +197,12 @@ world {
     # DEFAULT
     S:enable_pvp=TRUE
     B:log_chunkloading=false
+
+    # Max /rtp distance
+    D:rtp_max_distance=100000.0
+
+    # Min /rtp distance
+    D:rtp_min_distance=1000.0
 
     # If set to true, explosions and hostile mobs in spawn area will be disabled, players won't be able to attack each other in spawn area.
     B:safe_spawn=false
