--- a/config/randomtweaks/randomtweaks.cfg
+++ b/config/randomtweaks/randomtweaks.cfg
@@ -237,7 +237,7 @@ client {
         # Default: true
         B:fovChangesStatusMessage=true
 
-        # Enables the Noclip keybind, which toggles between /gamemode creative and /gamemode spectator.
+        # Enables the Noclip keybind, which toggles between /gamemode creative and /gamemode spectator. This does the same thing as F3+N, so is unbound by default.
         # Default: true
         B:noclip=true
 
@@ -420,7 +420,7 @@ misc {
     # Default: disableNetherPortalCreation
     S:disableNetherPortalCreationGameruleName=disableNetherPortalCreation
 
-    # The farmland trample behavior.
+    # The farmland trample behavior. This only works on Forge 1.12.2-14.23.4.2718 and above.
     # Valid values:
     # VANILLA
     # DONT_TRAMPLE_IF_FEATHER_FALLING
