--- a/config/terraqueous.cfg
+++ b/config/terraqueous.cfg
@@ -59,7 +59,7 @@ general {
 
         # Adds: Apple, Chery, Orange, Coconut, & Banana Trees
         # IDs: planks, sapling, trunk1, trunk2, foliage1, foliage2, foliage3, foliage4, foliage5
-        B:addTrees=false
+        B:addTrees=true
     }
 
     ##########################################################################################################
