Disabled molten constantan Mystcraft page

--- a/config/mystcraft/symbols.cfg
+++ b/config/mystcraft/symbols.cfg
@@ -293,7 +293,7 @@ symbol {
         B:modmat_fluidconcrete_0.enabled=false
         B:modmat_fluidethanol_0.enabled=false
         B:modmat_fluidplantoil_0.enabled=false
-        B:modmat_molten_constantan_0.enabled=true
+        B:modmat_molten_constantan_0.enabled=false
         B:modmat_molten_uranium_0.enabled=false
     }
 
