--- a/config/chiselsandbits.cfg
+++ b/config/chiselsandbits.cfg
@@ -195,6 +195,7 @@ crafting {
     B:com.globbypotato.rockhounding_surface.blocks.white_sands.GypsumPillars=true
     B:com.globbypotato.rockhounding_surface.blocks.white_sands.WhiteSand=true
     B:com.jaquadro.minecraft.storagedrawers.block.BlockTrim=true
+    B:com.jaquadro.minecraft.storagedrawersextra.block.BlockTrimExtra=true
     B:com.legacy.aether.blocks.BlockSunAltar=true
     B:com.legacy.aether.blocks.decorative.BlockPresent=true
     B:com.legacy.aether.blocks.decorative.BlockSkyrootBookshelf=true
@@ -454,6 +455,7 @@ crafting {
     B:shadows.fastbench.block.BlockFastBench=true
     B:shetiphian.terraqueous.common.block.BlockPlanks=true
     B:shetiphian.terraqueous.common.block.BlockTreeTrunk=true
+    B:shnupbups.tinkersaether.blocks.TABlock=true
     B:slimeknights.tconstruct.gadgets.block.BlockBrownstone=true
     B:slimeknights.tconstruct.gadgets.block.BlockDriedClay=true
     B:slimeknights.tconstruct.shared.block.BlockClearGlass=true
