Scannable no longer requires RF

--- a/config/scannable.cfg
+++ b/config/scannable.cfg
@@ -18,52 +18,52 @@ general {
     # Amount of energy that can be stored in a scanner.
     # Min: 0
     # Max: 2147483647
-    I:energyCapacityScanner=5000
+    I:energyCapacityScanner=0
 
     # Amount of energy used by the animal module per scan.
     # Min: 0
     # Max: 2147483647
-    I:energyCostModuleAnimal=25
+    I:energyCostModuleAnimal=0
 
     # Amount of energy used by the block module per scan.
     # Min: 0
     # Max: 2147483647
-    I:energyCostModuleBlock=100
+    I:energyCostModuleBlock=0
 
     # Amount of energy used by the entity module per scan.
     # Min: 0
     # Max: 2147483647
-    I:energyCostModuleEntity=75
+    I:energyCostModuleEntity=0
 
     # Amount of energy used by the fluid module per scan.
     # Min: 0
     # Max: 2147483647
-    I:energyCostModuleFluid=50
+    I:energyCostModuleFluid=0
 
     # Amount of energy used by the monster module per scan.
     # Min: 0
     # Max: 2147483647
-    I:energyCostModuleMonster=50
+    I:energyCostModuleMonster=0
 
     # Amount of energy used by the common ore module per scan.
     # Min: 0
     # Max: 2147483647
-    I:energyCostModuleOreCommon=75
+    I:energyCostModuleOreCommon=0
 
     # Amount of energy used by the rare ore module per scan.
     # Min: 0
     # Max: 2147483647
-    I:energyCostModuleOreRare=100
+    I:energyCostModuleOreRare=0
 
     # Amount of energy used by the range module per scan.
     # Min: 0
     # Max: 2147483647
-    I:energyCostModuleRange=100
+    I:energyCostModuleRange=0
 
     # Amount of energy used by the structure module per scan.
     # Min: 0
     # Max: 2147483647
-    I:energyCostModuleStructure=150
+    I:energyCostModuleStructure=0
 
     # Fluid names of fluids that should be ignored.
     S:fluidBlacklist <
