Disabled Terraqueous leather junk

--- a/config/terraqueous.cfg
+++ b/config/terraqueous.cfg
@@ -378,7 +378,7 @@ general {
             # Adds two AITasks
             # Animals the follow for wheat will also follow for hay
             # Animals that eat grass will also eat hay
-            B:addHayAITasks=true
+            B:addHayAITasks=false
 
             # Adds Burnium Dust and Coal Dust
             B:enableBlazeDropTweaks=false
@@ -402,7 +402,7 @@ general {
             B:enableSkeletonDropTweaks=true
 
             # Adds Worn Leather Boots and Belt
-            B:enableZombieDropTweaks=true
+            B:enableZombieDropTweaks=false
         }
 
         trees {
