--- a/config/jei/jei.cfg
+++ b/config/jei/jei.cfg
@@ -13,13 +13,16 @@ advanced {
     B:centerSearchBarEnabled=false
     B:debugModeEnabled=false
 
-    # Choose if JEI should give items direct to the inventory (inventory) or pick them up with the mouse (mouse_pickup).
+    # Choose if JEI should give ingredients direct to the inventory (inventory) or pick them up with the mouse (mouse_pickup).
     # [Default: mouse_pickup]
     # [Valid: [inventory, mouse_pickup]]
     S:giveMode=inventory
 
     # The maximum width of the ingredient list. [range: 4 ~ 100, default: 100]
     I:maxColumns=100
+
+    # The maximum height for the recipe gui. [range: 175 ~ 5000, default: 350]
+    I:maxRecipeGuiHeight=350
 
     # How the mod name should be formatted in the tooltip for JEI guis. Leave blank to disable. [Default: blue italic] [Valid: [black, dark_blue, dark_green, dark_aqua, dark_red, dark_purple, gold, gray, dark_gray, blue, green, aqua, red, light_purple, yellow, white, obfuscated, bold, strikethrough, underline, italic]]
     S:modNameFormat=blue italic
@@ -33,15 +36,15 @@ advanced {
 ##########################################################################################################
 
 search {
-    # Search mode for Item Colors (prefix: ^)
+    # Search mode for Colors (prefix: ^)
     # [Default: disabled]
     # [Valid: [enabled, require_prefix, disabled]]
-    S:colorSearchMode=enabled
+    S:colorSearchMode=require_prefix
 
     # Search mode for Creative Tab Names (prefix: %)
     # [Default: disabled]
     # [Valid: [enabled, require_prefix, disabled]]
-    S:creativeTabSearchMode=DISABLED
+    S:creativeTabSearchMode=require_prefix
 
     # Search mode for Mod Names (prefix: @)
     # [Default: require_prefix]
@@ -51,17 +54,17 @@ search {
     # Search mode for Ore Dictionary Names (prefix: $)
     # [Default: disabled]
     # [Valid: [enabled, require_prefix, disabled]]
-    S:oreDictSearchMode=enabled
+    S:oreDictSearchMode=require_prefix
 
     # Search mode for resources ids (prefix: &)
     # [Default: disabled]
     # [Valid: [enabled, require_prefix, disabled]]
-    S:resourceIdSearchMode=enabled
+    S:resourceIdSearchMode=require_prefix
 
     # Search mode for Tooltips (prefix: #)
     # [Default: enabled]
     # [Valid: [enabled, require_prefix, disabled]]
-    S:tooltipSearchMode=ENABLED
+    S:tooltipSearchMode=enabled
 }
 
 
