--- a/config/translocators.cfg
+++ b/config/translocators.cfg
@@ -3,7 +3,7 @@ B:"disable_crafting_grid"=false
 
 #Allows controlling what item is used to attach filtering mode.
 "filter_item" {
-	S:"registry_name"="translocators:diamond_nugget"
+	S:"registry_name"="minecraft:iron_nugget"
 
 	#Use '32767' for wild card.
 	I:"meta"=0
