Disabled molten gravitite/valkyerie pages

--- a/config/mystcraft/symbols.cfg
+++ b/config/mystcraft/symbols.cfg
@@ -905,6 +905,11 @@ symbol {
         B:modmat_fluid_napalm_0.enabled=false
     }
 
+    tinkersaether {
+        B:modmat_tinkersaether.molten_gravitite_0.enabled=false
+        B:modmat_tinkersaether.molten_valkyrie_0.enabled=false
+    }
+
 }
 
 
