--- a/config/chiselsandbits.cfg
+++ b/config/chiselsandbits.cfg
@@ -229,11 +229,13 @@ crafting {
     B:com.progwml6.natura.overworld.block.logs.BlockOverworldLog2=true
     B:com.progwml6.natura.overworld.block.logs.BlockRedwoodLog=true
     B:com.progwml6.natura.overworld.block.planks.BlockOverworldPlanks=true
+    B:com.teamacronymcoders.contenttweaker.modules.vanilla.blocks.BlockContent=true
     B:com.teamwizardry.refraction.common.block.BlockReflectiveAlloyBlock=true
     B:com.themastergeneral.moglowstone.blocks.GSBlock=true
     B:com.themastergeneral.moglowstone.blocks.GSOre=true
     B:com.xcompwiz.mystcraft.block.BlockCrystal=true
     B:de.sanandrew.mods.immersivecables.block.BlockCoil=true
+    B:dmfmm.catwalks.block.StairBlock=true
     B:ferro2000.immersivetech.common.blocks.stone.BlockStoneDecoration=true
     B:fi.dy.masa.autoverse.block.BlockSensor=true
     B:flaxbeard.immersivepetroleum.common.blocks.BlockIPBase=true
@@ -301,6 +303,7 @@ crafting {
     B:net.crazysnailboy.mods.rainboaks.block.BlockRainbowLog=true
     B:net.darkhax.darkutils.features.material.BlockWitherDust=true
     B:net.darkhax.darkutils.features.shulkerpearl.BlockShulkerPearl=true
+    B:net.insane96mcp.nethergoldore.block.BlockNetherGoldOre=true
     B:net.insomniakitten.jetorches.block.BlockLamp=true
     B:net.kipster.terra.objects.blocks.BlockAnkeriteOre=true
     B:net.kipster.terra.objects.blocks.BlockAnthraciteBlock=true
