Disabled Mystcraft profiling

--- a/config/mystcraft/core.cfg
+++ b/config/mystcraft/core.cfg
@@ -11,7 +11,7 @@ baselining {
     I:tickrate.minimum=20
 
     # If true, the baseline calculations won't run and instead a config file will be read.
-    B:useconfigs=false
+    B:useconfigs=true
 }
 
 
