Scannable scanner no longer has energy bar

--- a/config/scannable.cfg
+++ b/config/scannable.cfg
@@ -207,7 +207,7 @@ general {
 
     # Whether to consume energy when performing a scan.
     # Will make the scanner a chargeable item.
-    B:useEnergy=true
+    B:useEnergy=false
 }
 
 
