Water is now infinite in all wet biomes, the aether, and the void

--- a/config/watercontrolextreme.cfg
+++ b/config/watercontrolextreme.cfg
@@ -9,9 +9,19 @@ general {
     # Biomes in which these fluids should be infinite
     S:infiniteBiomes <
         minecraft:ocean
-        minecraft:beach
+        minecraft:beaches
         minecraft:river
         minecraft:swamp
+        minecraft:mushroom_island
+        minecraft:mushroom_island_shore
+        minecraft:deep_ocean
+        minecraft:stone_beach
+        minecraft:cold_beach
+        minecraft:void
+        minecraft:mutated_swampland
+        traverse:green_swamp
+        traverse:temperate_rainforest
+        aether_legacy:aether_highlands
      >
 
     # Dimensions in which these fluids should be infinite
