Updated JEI blacklist

--- a/config/jei/itemBlacklist.cfg
+++ b/config/jei/itemBlacklist.cfg
@@ -100,6 +100,7 @@ advanced {
         tconstruct:arrow:0:wood,sapphire,feather
         tconstruct:scythe:0:ruby,ruby,ruby,ruby
         tconstruct:cleaver:0:aercloudblue,aercloudblue,aercloudblue,aercloudblue
+        careerbees:ingredients
         tconstruct:shovel:0:candycane,candycane,candycane
         forestry:refractory:binnie.juice.banana;
         tconstruct:bolt:0:wood,silver,feather
@@ -2070,7 +2071,6 @@ advanced {
         tconstruct:pickaxe:0:aercloudgold,aercloudgold,aercloudgold
         forestry:can:depleted_fuel_lecm_243_fluoride_flibe;
         forestry:refractory:ice;
-        rftools:matter_transmitter
         conarm:leggings:0:lumium_plustic,lumium_plustic,lumium_plustic
         tconstruct:shuriken:0:holystone,holystone,holystone,holystone
         tconstruct:rapier:0:enderium_plustic,enderium_plustic,enderium_plustic
