Disabled FTB Utilities AFK timer

--- a/config/ftbutilities.cfg
+++ b/config/ftbutilities.cfg
@@ -2,7 +2,7 @@
 
 afk {
     # Enables afk timer.
-    B:enabled=true
+    B:enabled=false
 
     # Enables afk timer in singleplayer.
     B:enabled_singleplayer=false
