Updated pack name in Its The Little Things config

--- a/config/itlt.cfg
+++ b/config/itlt.cfg
@@ -25,7 +25,7 @@ display {
     B:useTechnicIcon=true
 
     # Change this value to change the name of the MineCraft window
-    S:windowDisplayTitle=Minecraft MultiMC5
+    S:windowDisplayTitle=Project Gear 1.12.2
 }
 
 
