--- a/config/botaniatweaks.cfg
+++ b/config/botaniatweaks.cfg
@@ -1,31 +1,26 @@
 # Configuration file
 
-~CONFIG_VERSION: 1
+~CONFIG_VERSION: 3
 
 balance {
+    # Should the flint-to-powder alchemy recipe be the same price as the powder-to-flint? This makes it possible to run an Entripinnyum off a cobbleworks. [default: false]
+    B:cheapFlintToPowder=true
+
     # How does the Orechid determine its cost and speed to run?
     # "default": The Orechid will be cheap if Garden of Glass is loaded.
     # "force_gog": The Orechid will always be cheap to run, even if Garden of Glass is not present.
     # "force_no_gog": The Orechid will be expensive to run, even in Garden of Glass mode. [default: default]
     S:cheapOrechid=default
 
-    # Should crafting recipes with the Spork be enabled? These recipes provide more expensive paths to corporea sparks, but are available earlier in the game (they don't require going to the End or elven technology).
-    B:corporeaSpork=true
-
     # The default mana output of the Manastorm Charge is multiplied by this amount. Setting this to a value higher than around ~1.38889ish allows for the "Manastorm Reactor" build to be profitable. [range: 1.0 ~ 15.0, default: 8.0]
     S:manastormScaleFactor=8.0
 
-    # Should the Entropinnyum generate 8x the mana it does by default? This makes it possible to run an Entropinnyum off of, for example, a cobbleworks; by default, the flint-to-gunpowder recipe is much too expensive to make another TNT.
-    # 
-    # Also I think this flower is way underpowered in general, but that's just me. [default: false]
-    B:superEntropinnyum=true
-
-    # Should the Spectrolus generate 10x the mana it does by default? This makes it much cheaper to run; filling a mana pool only requires a little over five stacks of wool, not over a double chest's worth. [default: false]
+    # Should the Spectrolus generate 8x the mana it does by default? This makes it much cheaper to run; filling a mana pool only requires a little over five stacks of wool, not over a double chest's worth. [default: false]
     B:superSpectrolus=true
 
     tnt {
-        # Should the Entropinnyum accept TNT that came from a vanilla-style TNT duplicator device? [default: false]
-        B:allowEntropinnyumDuplicatedTNT=false
+        # Should the Entropinnyum block TNT that came from a vanilla-style TNT duplicator device? [default: false]
+        B:denyEntropinnyumDuplicatedTNT=true
 
         # Should the Entropinnyum only accept vanilla TNT entities? [default: false]
         B:forceVanillaTNT=false
@@ -39,40 +34,43 @@ balance {
         I:passiveDecayTimer=72000
 
         flowers {
-            # Does the arcanerose experience passive decay? [default: false]
+            # Does the arcanerose, from botania, experience passive decay? [default: false]
             B:arcaneroseDecay=false
 
-            # Does the dandelifeon experience passive decay? [default: false]
+            # Does the dandelifeon, from botania, experience passive decay? [default: false]
             B:dandelifeonDecay=false
 
-            # Does the endoflame experience passive decay? [default: false]
+            # Does the endoflame, from botania, experience passive decay? [default: false]
             B:endoflameDecay=false
 
-            # Does the entropinnyum experience passive decay? [default: false]
+            # Does the entropinnyum, from botania, experience passive decay? [default: false]
             B:entropinnyumDecay=false
 
-            # Does the gourmaryllis experience passive decay? [default: false]
+            # Does the gourmaryllis, from botania, experience passive decay? [default: false]
             B:gourmaryllisDecay=false
 
-            # Does the kekimurus experience passive decay? [default: false]
+            # Does the kekimurus, from botania, experience passive decay? [default: false]
             B:kekimurusDecay=false
 
-            # Does the munchdew experience passive decay? [default: false]
+            # Does the munchdew, from botania, experience passive decay? [default: false]
             B:munchdewDecay=false
 
-            # Does the narslimmus experience passive decay? [default: false]
+            # Does the narslimmus, from botania, experience passive decay? [default: false]
             B:narslimmusDecay=false
 
-            # Does the rafflowsia experience passive decay? [default: false]
+            # Does the petropetunia, from floralchemy, experience passive decay? [default: false]
+            B:petropetuniaDecay=false
+
+            # Does the rafflowsia, from botania, experience passive decay? [default: false]
             B:rafflowsiaDecay=false
 
-            # Does the shulkmenot experience passive decay? [default: false]
+            # Does the shulkmenot, from botania, experience passive decay? [default: false]
             B:shulkmenotDecay=false
 
-            # Does the spectrolus experience passive decay? [default: false]
+            # Does the spectrolus, from botania, experience passive decay? [default: false]
             B:spectrolusDecay=false
 
-            # Does the thermalily experience passive decay? [default: false]
+            # Does the thermalily, from botania, experience passive decay? [default: false]
             B:thermalilyDecay=false
         }
 
@@ -101,7 +99,6 @@ balance {
 
 
 compat {
-    B:dootableAgricraft=true
 }
 
 
@@ -109,7 +106,7 @@ etc {
     # If true, placing a corporea-related block will automatically decorate it with corporea sparks and floral powder, unless you're sneaking. [default: false]
     B:autoCorporeaSpark=false
 
-    # Can dispensers shoot glass bottles to turn them in to Ender Air in the End dimension? This allows for automation of Ender Air, which was not previously possible. [default: true]
+    # Can dispensers shoot glass bottles to turn them in to Ender Air in the End dimension? This allows for automation of Ender Air, which was not previously possible. [default: false]
     B:enderAirDispenser=true
 
     # This number acts as a multiplier for how much mana is in the Guilty Mana Pool. Setting higher than 1 allows for creating "creative pool only" mana infusion recipes, by adding recipes using more than an ordinary pool can hold. [range: 0.0 ~ 1.06, default: 1.0]
@@ -118,13 +115,13 @@ etc {
     # Should Botania Tweaks keep statistics on the total amount of mana generated, across all flowers and dimensions? [default: false]
     B:keepManaGenerationStatistics=true
 
+    # Should the Runic Altar and Petal Apothecary pay more attention to the NBT tags on particular items? By default, they only compare item ID and data values. If "true", the NBT tag on the user-input stack must be a superset of the NBT tag supplied in the recipe. [default: false]
+    B:nbtAwareAltarAndApothecary=false
+
     # Should the water bowl mechanic, where you right click on water with a bowl to create a filled bowl, be available outside of Garden of Glass mode? [default: false]
     B:nonGogWaterBowl=false
 
-    # Can players place tiny potatoes in flower pots? Please don't disable this, it's very cute. [default: true]
-    B:pottedTinyPotato=true
-
-    # Can sheep eat the custom Botania grass blocks to regrow their wool? [default: true]
+    # Can sheep eat the custom Botania grass blocks to regrow their wool? [default: false]
     B:sheepEatCustomGrass=true
 
     # If true, any item is allowed to enter the Petal Apothecary, not just petals, runes, and manaresources. Great for modpacks. [default: false]
