--- a/config/chiselsandbits.cfg
+++ b/config/chiselsandbits.cfg
@@ -512,6 +512,7 @@ crafting {
     B:vazkii.botania.common.block.mana.BlockAlchemyCatalyst=true
     B:vazkii.botania.common.block.mana.BlockConjurationCatalyst=true
     B:vazkii.psi.common.block.BlockPsiDecorative=true
+    B:vazkii.quark.automation.block.BlockSugar=true
     B:vazkii.quark.building.block.BlockBark=true
     B:vazkii.quark.building.block.BlockCarvedWood=true
     B:vazkii.quark.building.block.BlockCharredNetherBricks=true
@@ -537,6 +538,7 @@ crafting {
     B:vazkii.quark.building.block.BlockVerticalPlanks=true
     B:vazkii.quark.building.block.BlockVerticalStainedPlanks=true
     B:vazkii.quark.building.block.BlockWorldStoneBricks=true
+    B:vazkii.quark.building.block.BlockWorldStonePavement=true
     B:vazkii.quark.decoration.block.BlockBlazeLantern=true
     B:vazkii.quark.decoration.block.BlockCharcoal=true
     B:vazkii.quark.decoration.block.BlockCustomBookshelf=true
