--- a/config/modularitemframe.cfg
+++ b/config/modularitemframe.cfg
@@ -2,25 +2,52 @@
 
 general {
     # Additional range the dropper can have for inventory checking
+    # Min: 0
+    # Default: 0
+    # Max: 0
     I:add_dropper_range=1
 
     # Allow fake players to interact with frames
+    # Default: null
     B:allow_fake_players=false
 
     # Can the Nullify frame suck items from attached inventory - making it a trash can (this also goes for Fluid and Energy Storage
+    # Default: null
     B:can_nulli_frame_suck_from_invent=false
 
     # Maximum teleport distance of the teleport module
+    # Min: 0
+    # Default: 0
+    # Max: 0
     I:max_teleport_range=64
 
+    # Maximum range of the vacuum frame
+    # Min: 1
+    # Default: 1
+    # Max: 1
+    I:max_vacuum_range=5
+
     # When the crafting frame is put on a chest (or other inventory) it will also use player inventory to craft
+    # Default: null
     B:still_use_player_inv=true
 
     # Fluid Capacity of the tank frame (mB)
+    # Min: 1000
+    # Default: 1000
+    # Max: 1000
     I:tank_frame_capacity=4000
 
     # Transferrate of the tank (mB) [0=disabled]
+    # Min: 0
+    # Default: 0
+    # Max: 0
     I:tank_transfer_rate=100
+
+    # Delay between entity pick ups in tile ticks (20~=1sec)
+    # Min: 1
+    # Default: 1
+    # Max: 1
+    I:vacuum_cooldown=20
 }
 
 
