--- a/config/mystcraft/balance.cfg
+++ b/config/mystcraft/balance.cfg
@@ -218,6 +218,8 @@ baselining {
     I:"nuclearcraft:fluid_americium_243_fluoride_0"=0
     I:"nuclearcraft:fluid_americium_243_fluoride_flibe_0"=0
     I:"nuclearcraft:fluid_ammonia_0"=0
+    I:"nuclearcraft:fluid_arsenic_0"=0
+    I:"nuclearcraft:fluid_bas_0"=0
     I:"nuclearcraft:fluid_bef2_0"=0
     I:"nuclearcraft:fluid_berkelium_247_0"=0
     I:"nuclearcraft:fluid_berkelium_247_fluoride_0"=0
@@ -347,6 +349,7 @@ baselining {
     I:"nuclearcraft:fluid_emerald_nak_hot_0"=0
     I:"nuclearcraft:fluid_ender_nak_0"=0
     I:"nuclearcraft:fluid_ender_nak_hot_0"=0
+    I:"nuclearcraft:fluid_ferroboron_0"=0
     I:"nuclearcraft:fluid_flibe_0"=0
     I:"nuclearcraft:fluid_fluorine_0"=0
     I:"nuclearcraft:fluid_fluorite_water_0"=0
@@ -429,6 +432,7 @@ baselining {
     I:"nuclearcraft:fluid_glowstone_nak_hot_0"=0
     I:"nuclearcraft:fluid_gold_nak_0"=0
     I:"nuclearcraft:fluid_gold_nak_hot_0"=0
+    I:"nuclearcraft:fluid_hard_carbon_0"=0
     I:"nuclearcraft:fluid_helium3_0"=0
     I:"nuclearcraft:fluid_helium_0"=0
     I:"nuclearcraft:fluid_hydrofluoric_acid_0"=0
@@ -505,6 +509,7 @@ baselining {
     I:"nuclearcraft:fluid_thorium_fluoride_flibe_0"=0
     I:"nuclearcraft:fluid_tin_nak_0"=0
     I:"nuclearcraft:fluid_tin_nak_hot_0"=0
+    I:"nuclearcraft:fluid_tough_0"=0
     I:"nuclearcraft:fluid_tritium_0"=0
     I:"nuclearcraft:fluid_uranium_233_0"=0
     I:"nuclearcraft:fluid_uranium_233_fluoride_0"=0
@@ -529,6 +534,10 @@ baselining {
     I:"plustic:plustic.molten_refinedobsidian_0"=0
     I:"plustic:plustic.molten_terrasteel_0"=0
     I:"pneumaticcraft:fluid.etchacid_0"=0
+    I:"pneumaticcraft:fluid.fuel_0"=0
+    I:"pneumaticcraft:fluid.kerosene_0"=0
+    I:"pneumaticcraft:fluid.lpg_0"=0
+    I:"pneumaticcraft:fluid.plastic_0"=0
     I:"rockhounding_surface:fluid.acidic_water_0"=0
     I:"rockhounding_surface:fluid.aging_bath_0"=0
     I:"rockhounding_surface:fluid.casting_bath_0"=0
@@ -659,6 +668,16 @@ fluids {
     S:fluid.applejuice.instability.factor_accessibility=
     S:fluid.applejuice.instability.factor_flat=
     S:fluid.applejuice.seabanned=
+    S:fluid.arsenic.cardrank=
+    S:fluid.arsenic.grammar=
+    S:fluid.arsenic.instability.factor_accessibility=
+    S:fluid.arsenic.instability.factor_flat=
+    S:fluid.arsenic.seabanned=
+    S:fluid.bas.cardrank=
+    S:fluid.bas.grammar=
+    S:fluid.bas.instability.factor_accessibility=
+    S:fluid.bas.instability.factor_flat=
+    S:fluid.bas.seabanned=
     S:fluid.bef2.cardrank=
     S:fluid.bef2.grammar=
     S:fluid.bef2.instability.factor_accessibility=
@@ -1892,6 +1911,11 @@ fluids {
     S:fluid.ethanol.instability.factor_accessibility=
     S:fluid.ethanol.instability.factor_flat=
     S:fluid.ethanol.seabanned=
+    S:fluid.ferroboron.cardrank=
+    S:fluid.ferroboron.grammar=
+    S:fluid.ferroboron.instability.factor_accessibility=
+    S:fluid.ferroboron.instability.factor_flat=
+    S:fluid.ferroboron.seabanned=
     S:fluid.flibe.cardrank=
     S:fluid.flibe.grammar=
     S:fluid.flibe.instability.factor_accessibility=
@@ -2469,6 +2493,11 @@ fluids {
     S:fluid.h2so4.instability.factor_accessibility=
     S:fluid.h2so4.instability.factor_flat=
     S:fluid.h2so4.seabanned=
+    S:fluid.hard_carbon.cardrank=
+    S:fluid.hard_carbon.grammar=
+    S:fluid.hard_carbon.instability.factor_accessibility=
+    S:fluid.hard_carbon.instability.factor_flat=
+    S:fluid.hard_carbon.seabanned=
     S:fluid.helium.cardrank=
     S:fluid.helium.grammar=
     S:fluid.helium.instability.factor_accessibility=
@@ -3210,6 +3239,11 @@ fluids {
     S:fluid.tin_nak_hot.instability.factor_accessibility=
     S:fluid.tin_nak_hot.instability.factor_flat=
     S:fluid.tin_nak_hot.seabanned=
+    S:fluid.tough.cardrank=
+    S:fluid.tough.grammar=
+    S:fluid.tough.instability.factor_accessibility=
+    S:fluid.tough.instability.factor_flat=
+    S:fluid.tough.seabanned=
     S:fluid.tritium.cardrank=
     S:fluid.tritium.grammar=
     S:fluid.tritium.instability.factor_accessibility=
