--- a/config/quark.cfg
+++ b/config/quark.cfg
@@ -43,6 +43,7 @@ _modules {
     B:experimental=true
     B:management=true
     B:misc=true
+    B:oddities=true
     B:tweaks=true
     B:vanity=true
     B:world=true
@@ -56,11 +57,14 @@ automation {
     B:"Dispensers place blocks"=true
     B:"Dispensers place seeds"=true
     B:"Ender watcher"=true
+    B:"Metal buttons"=true
     B:"Obsidian pressure plate"=true
     B:"Piston Block Breakers"=true
     B:"Pistons Push and Pull Items"=true
     B:"Pistons move t es"=true
     B:"Rain detector"=true
+    B:"Redstone randomizer"=true
+    B:"Sugar block"=true
 
     "dispensers place blocks" {
         # Blocks that dispensers should not be able to place
@@ -141,6 +145,11 @@ automation {
         D:"Push Strength"=0.47999998927116394
     }
 
+    "metal buttons" {
+        B:"Enable Gold Button"=true
+        B:"Enable Iron Button"=true
+    }
+
 }
 
 
@@ -149,6 +158,7 @@ building {
     B:"Carved wood"=true
     B:"Charred nether bricks"=true
     B:"Duskbound blocks"=true
+    B:"Framed glass"=true
     B:"Hardened clay tiles"=true
     B:"Iron plates"=true
     B:"Magma bricks"=true
@@ -169,6 +179,7 @@ building {
     B:"Vanilla walls"=true
     B:"Vertical wood planks"=true
     B:"World stone bricks"=true
+    B:"World stone pavement"=true
 
     "sugar cane blocks" {
         B:"Enable stairs and slabs"=true
@@ -291,6 +302,7 @@ building {
 
 client {
     B:"Auto jump hotkey"=true
+    B:"Better fire effect"=true
     B:"Better vanilla textures"=true
     B:"Chest search bar"=true
     B:"Creepers turn red when they're exploding"=true
@@ -298,11 +310,12 @@ client {
     B:"Greener grass"=true
     B:"Improved mount h u d"=true
     B:"Improved sign edit"=false
+    B:"Items flash before expiring"=true
     B:"Less intrusive shields"=true
     B:"Map tooltip"=true
     B:"No potion shift"=true
 
-    # Shift-Ctrl-F12 for panorama screenshot.
+    # Shift-Ctrl-F2 for panorama screenshot.
     # Panoramas show up in the main menu.
     # Rename a panorama folder to 'main_menu' and it'll always show that one.
     B:"Panorama maker"=true
@@ -405,6 +418,7 @@ client {
 
     "better vanilla textures" {
         B:"Override Andesite"=true
+        B:"Override Beetroot Seeds"=true
         B:"Override Bow Animation"=true
         B:"Override Bricks"=true
         B:"Override Diorite"=true
@@ -415,10 +429,22 @@ client {
         B:"Override Pumpkin Front Face"=false
     }
 
+    "items flash before expiring" {
+        # How many ticks should the item have left when it starts flashing. Default is 10 seconds (200).
+        I:"Time To Start Flashing"=200
+    }
+
+    "better fire effect" {
+        B:"Enable Different Render"=true
+        B:"Enable Particles"=true
+    }
+
 }
 
 
 decoration {
+    # Adds the colored flower pot features of supporting additional flowers and comparator power to the vanilla flower pot using a block substitution
+    B:"Better vanilla flower pot"=true
     B:"Blaze lantern"=true
     B:"Charcoal block"=true
     B:"Colored flower pots"=true
@@ -428,11 +454,14 @@ decoration {
     B:"Iron ladders"=true
     B:"Leaf carpets"=true
     B:"Lit lamp"=true
+    B:"More banner layers"=true
     B:"More banners"=true
     B:"Nether brick fence gate"=true
+    B:"Paper lantern"=true
     B:"Paper wall"=true
     B:"Tallow and candles"=true
     B:"Varied bookshelves"=true
+    B:"Varied buttons and pressure plates"=true
     B:"Varied chests"=true
     B:"Varied trapdoors"=true
 
@@ -479,12 +508,55 @@ decoration {
         B:"Enable Tallow"=true
         I:"Max Tallow Dropped"=3
         I:"Min Tallow Dropped"=1
+        I:"Tallow Burn Time"=200
     }
 
     "charcoal block" {
         # This feature disables itself if any of the following mods are loaded: 
         #  - actuallyadditions
         #  - mekanism
+        # This is done to prevent content overlap.
+        # You can turn this on to force the feature to be loaded even if the above mods are also loaded.
+        B:"Force Enabled"=false
+    }
+
+    "colored flower pots" {
+        # If true, filled flower pots will respond to comparators based on the contents.
+        B:"Comparator Logic"=true
+
+        # List of itemstacks to override default flower behavior, default checks for BlockBush.
+        # Format is 'modid:name[:meta]->power'. Unset meta will default wildcard. Power refers to comparator power, non-zero makes it valid for a flower pot. Specific values:
+        # * 0 - not flower, blacklists from placing in a flower pot
+        # * 1 - mushroom
+        # * 4 - fern
+        # * 7 - flower
+        # * 10 - dead bush
+        # * 12 - sapling
+        # * 15 - cactus
+        S:"Flower Overrides" <
+            biomesoplenty:mushroom->1
+            biomesoplenty:flower_0->7
+            biomesoplenty:flower_0->7
+            biomesoplenty:sapling_0->12
+            biomesoplenty:sapling_1->12
+            biomesoplenty:sapling_2->12
+            quark:glowshroom->1
+         >
+    }
+
+    "more banner layers" {
+        I:"Survival Layer Count"=16
+    }
+
+    "varied buttons and pressure plates" {
+        B:"Enable Buttons"=true
+        B:"Enable Pressure Plates"=true
+        B:"Prefix vanilla blocks with Oak"=true
+    }
+
+    "better vanilla flower pot" {
+        # This feature disables itself if any of the following mods are loaded: 
+        #  - inspirations
         # This is done to prevent content overlap.
         # You can turn this on to force the feature to be loaded even if the above mods are also loaded.
         B:"Force Enabled"=false
@@ -501,6 +573,7 @@ experimental {
     # For obvious reasons, this is incompatible with Optifine.
     # 
     B:"Colored lights"=false
+    B:"Parrots say despacito"=false
 
     # Suppresses all STDOUT (and STDERR, if enabled) messages so they don't show up in the console.
     # Use this if some mod left behind debug messages and you don't want to see them.
@@ -554,11 +627,13 @@ management {
     B:"Better craft shifting"=true
     B:"Change hotbar keybind"=true
     B:"Chest buttons"=true
+    B:"Chests in boats"=true
     B:"Ctrl-click an item to favorite it. Favorited items aren't stored by the other features here"=true
     B:"Inventory sorting"=true
     B:"Press Ctrl-DELETE in the inventory to delete an item"=true
     B:"Press F in the inventory to switch item to main hand"=true
     B:"Press T in the inventory to link items to chat"=true
+    B:"Right click add to shulker box"=true
     B:"Store to chests"=true
 
     "store to chests" {
@@ -690,6 +765,18 @@ management {
         I:"Position Y (Creative)"=-20
     }
 
+    "press ctrl-delete in the inventory to delete an item" {
+        B:"Enable Trash Button"=true
+        I:"Trash Button X"=3
+        I:"Trash Button Y"=-25
+        B:"Trash Button only on Player Inventory"=false
+    }
+
+    "better craft shifting" {
+        B:"Enable Crafting Table"=true
+        B:"Enable Villager"=true
+    }
+
 }
 
 
@@ -706,6 +793,7 @@ misc {
     B:"Named snow golems with pumpkins drop player heads if killed by a witch"=true
     B:"Note block interface"=true
     B:"Note blocks play mob sounds if there's a head attached"=true
+    B:"Parrot eggs"=true
     B:"Place vanilla dusts"=true
     B:"Poison potato usage"=true
     B:"Slime bucket"=true
@@ -830,6 +918,33 @@ misc {
         B:"Repeater Recipe"=true
     }
 
+    "parrot eggs" {
+        I:"Egg Creation Time"=12000
+        B:"Enable Special Awesome Parrot"=true
+        S:"Feed Item"=minecraft:beetroot_seeds
+
+        # If this is X, the parrot will, on average, start making an egg in every X seeds fed
+        I:"Success Chance"=20
+    }
+
+}
+
+
+oddities {
+    B:Pipes=true
+
+    pipes {
+        # Freel free to disable so you don't see items going through pipes, good if your PC is a potato
+        B:"Enable Pipe Render"=true
+
+        # Set to 0 if you don't want pipes to have a max amount of items
+        I:"Max Pipe Items"=16
+
+        # How long it takes for an item to cross a pipe. Bigger = slower.
+        I:"Pipe Speed"=5
+        I:"Pipes Crafted"=6
+    }
+
 }
 
 
@@ -930,6 +1045,7 @@ tweaks {
 
         # This feature disables itself if any of the following mods are loaded: 
         #  - morpheus
+        #  - sleepingoverhaul
         # This is done to prevent content overlap.
         # You can turn this on to force the feature to be loaded even if the above mods are also loaded.
         B:"Force Enabled"=false
@@ -943,6 +1059,9 @@ tweaks {
 
     "stackable items" {
         I:Minecarts=16
+        I:Potions=8
+        I:Saddle=8
+        I:Soups=64
     }
 
     "jump boost allows to step up 1 block" {
@@ -1064,6 +1183,7 @@ world {
     B:"Crystal caves"=true
     B:"Default world options"=true
     B:"Depth mobs"=true
+    B:"Fairy rings"=true
     B:"Generate clay underground like dirt"=false
     B:"Guardians spawn in oceans"=true
     B:"Nether fossils"=true
@@ -1076,6 +1196,7 @@ world {
     # If you want to use it in multiplayer, set the world type to "quark_realistic"
     B:"Realistic world type"=true
     B:"Revamp stone gen"=true
+    B:Speleothems=true
     B:"Underground biomes"=true
     B:"Varied dungeons"=true
     B:Wraiths=true
@@ -1152,7 +1273,7 @@ world {
             #  [range: 0 ~ 2147483647, default: 14]
             I:"Cluster Radius"=14
 
-            # Out of how many chunks would one of these clusters generate [range: 0 ~ 2147483647, default: 15]
+            # Out of how many chunks would one of these clusters generate [range: 0 ~ 2147483647, default: 9]
             I:"Cluster Rarity"=15
 
             #  [default: true]
@@ -1193,7 +1314,7 @@ world {
             #  [range: 0 ~ 2147483647, default: 14]
             I:"Cluster Radius"=14
 
-            # Out of how many chunks would one of these clusters generate [range: 0 ~ 2147483647, default: 15]
+            # Out of how many chunks would one of these clusters generate [range: 0 ~ 2147483647, default: 9]
             I:"Cluster Rarity"=15
 
             #  [default: true]
@@ -1230,7 +1351,7 @@ world {
             #  [range: 0 ~ 2147483647, default: 14]
             I:"Cluster Radius"=14
 
-            # Out of how many chunks would one of these clusters generate [range: 0 ~ 2147483647, default: 15]
+            # Out of how many chunks would one of these clusters generate [range: 0 ~ 2147483647, default: 9]
             I:"Cluster Rarity"=15
 
             #  [default: true]
@@ -1268,7 +1389,7 @@ world {
             #  [range: 0 ~ 2147483647, default: 14]
             I:"Cluster Radius"=14
 
-            # Out of how many chunks would one of these clusters generate [range: 0 ~ 2147483647, default: 15]
+            # Out of how many chunks would one of these clusters generate [range: 0 ~ 2147483647, default: 9]
             I:"Cluster Rarity"=15
 
             #  [default: true]
@@ -1309,7 +1430,7 @@ world {
             #  [range: 0 ~ 2147483647, default: 14]
             I:"Cluster Radius"=14
 
-            # Out of how many chunks would one of these clusters generate [range: 0 ~ 2147483647, default: 15]
+            # Out of how many chunks would one of these clusters generate [range: 0 ~ 2147483647, default: 9]
             I:"Cluster Rarity"=15
 
             #  [default: true]
@@ -2284,6 +2405,45 @@ world {
     "nether fossils" {
         # The rarity of a fossil in a chunk. Higher means fewer fossils.
         I:"Fossil Chance"=25
+    }
+
+    "fairy rings" {
+        I:"Forest Chance"=40
+        I:"Plains Chance"=100
+        S:"Spawnable Ores" <
+            minecraft:emerald_ore
+            minecraft:diamond_ore
+         >
+
+        dimensions {
+            #  [default: [0]]
+            S:Dimensions <
+                0
+             >
+
+            #  [default: false]
+            B:"Is Blacklist"=false
+        }
+
+    }
+
+    speleothems {
+        I:"Cluster Attempts Per Chunk"=60
+        I:"Cluster Attempts Per Chunk (Nether)"=4
+        I:"Speleothems Per Cluster"=12
+        I:"Speleothems Per Cluster (Nether)"=12
+
+        dimensions {
+            #  [default: [0], [-1]]
+            S:Dimensions <
+                0
+                -1
+             >
+
+            #  [default: false]
+            B:"Is Blacklist"=false
+        }
+
     }
 
 }
