--- a/config/rockhounding_surface.cfg
+++ b/config/rockhounding_surface.cfg
@@ -100,6 +100,9 @@ gypsum {
     # Enable the gypsum blocks
     B:ALLOW_GYPSUM_DECO=true
 
+    # Enable the gypsum making by tossing White Sand into water
+    B:ALLOW_GYPSUM_TOSS=true
+
     # Enable the White Sands Biome and its features (biome, food) before creating a world
     B:ENABLE_BIOME=true
     I:WHITE_SANDS_ID=110
