--- a/config/unidict/UniDict.cfg
+++ b/config/unidict/UniDict.cfg
@@ -1,6 +1,6 @@
 # Configuration file
 
-~CONFIG_VERSION: 1.12.2-2.5f
+~CONFIG_VERSION: 1.12.2-2.7b
 
 dump {
     # Enable this to keep track of all the entries.
@@ -225,7 +225,7 @@ resources {
         unidict:dustinvar_x3_size.3
         unidict:dustbronze_x4_size.4
         unidict:dustelectrum_x2_size.2
-	unidict:ingotbronze_x4_size.4
+        unidict:ingotbronze_x4_size.4
      >
 
     # resources to be black-listed.
