--- a/config/forestry/common.cfg
+++ b/config/forestry/common.cfg
@@ -108,6 +108,11 @@ power {
 structures {
     # List specific structures to disable them. [default: []] [valid: [alveary3x3, farm3x3, farm3x4, farm3x5, farm4x4, farm5x5]]
     S:disabled <
+	farm3x3
+	farm3x4
+	farm3x5
+	farm4x4
+	farm5x5
      >
 }
 
